--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ td, p, li {
     <tr><td><strong>Poisonous?</strong></td><td>No</td></tr>
     <tr><td><strong>Max hit</strong></td><td>Memeage (∞)</td></tr>
     <tr><td><strong>Attack style</strong></td><td>Bite / Affectionate Roasting</td></tr>
-    <tr><td><strong>Weakness</strong></td><td>Beer, compliments, cuddles, football-looking cats, snacks</td></tr>
-    <tr><td><strong>Immune to</strong></td><td>Pam’s judgement; Bin day</td></tr>
+    <tr><td><strong>Weakness</strong></td><td>Beer, compliments, cuddles, football-shaped cats, snacks</td></tr>
+    <tr><td><strong>Immune to</strong></td><td>Pam’s judgement, Bin day</td></tr>
     <tr><td><strong>Location</strong></td><td>The Bedroom Dungeon (Hard Mode)</td></tr>
     <tr><td><strong>Release date</strong></td><td>25 November 1994</td></tr>
     <tr><td><strong>Examine</strong></td><td><em>"Looks human... suspiciously well disguised..."</em></td></tr>
