--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ td, p, li {
 <div class="infobox">
 
   <!-- Your OSRS image -->
-  <img src="Kitttin.png">
+  <img src="Kitttin.PNG">
 
   <h3>Overview</h3>
   <table>
