--- a/index.html
+++ b/index.html
@@ -107,8 +107,13 @@ td, p, li {
 <!-- INFOBOX -->
 <div class="infobox">
 
-  <!-- Your OSRS image -->
-  <img src="Kitttin.PNG">
+  <img class="image" src="Kitttin.PNG" alt="kitttin">
+
+  <h3>Overview</h3>
+  <table>
+    ...
+  </table>
+</div>
 
   <h3>Overview</h3>
   <table>
