--- a/index.html
+++ b/index.html
@@ -1,173 +1,125 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>kitttin (boss)</title>
-
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Kitttin Boss Page</title>
 <style>
-body {
-  font-family: Arial, sans-serif;
-  background: #f6f5ef;
-  color:#222;
-  margin:20px;
-}
-
-.container {
-  max-width: 980px;
-  margin: auto;
-}
-
-/* Title */
-.page-title {
-  font-size: 32px;
-  font-weight: 700;
-  color:#0b4a6f;
-  margin-bottom: 12px;
-}
-
-/* Infobox */
-.infobox {
-  float: right;
-  width: 320px;
-  margin-left: 18px;
-  background: #fff7ea;
-  border: 1px solid #d6c7a3;
-  padding: 12px;
-  box-shadow: 0 1px 0 rgba(0,0,0,0.05);
-  font-size: 14px;
-}
-
-.infobox img {
-  width: auto;
-  height: auto;
-  border: 1px solid #dcd0b8;
-  margin-bottom: 10px;
-}
-
-.infobox table {
-  width: 100%;
-  border-collapse: collapse;
-  font-size: 13px;
-}
-
-.section {
-  background: #fff;
-  border: 1px solid #e7dfc9;
-  padding: 14px;
-  margin-bottom: 14px;
-}
-
-.section h2 {
-  margin-top: 0;
-  color:#0b4a6f;
-  font-size: 18px;
-}
-
-/* Drops Table */
-.drops {
-  width: 100%;
-  border-collapse: collapse;
-  font-size: 14px;
-}
-
-.drops th, .drops td {
-  border: 1px solid #eee;
-  padding: 8px;
-  text-align: left;
-}
-
-.drops th {
-  background: #f4efe3;
-}
-
-/* Prevent weird wrapping */
-td, p, li {
-  word-break: normal;
-}
-
-/* Mobile layout fix */
-@media (max-width: 700px) {
-  .infobox {
-    float: none;
-    width: 100%;
-    margin: 0 0 20px 0;
-  }
-}
+    body {
+        background-color: #0d0d0d;
+        font-family: "Georgia", serif;
+        color: #e1d6b8;
+        margin: 0;
+        padding: 0;
+    }
+    .container {
+        width: 80%;
+        max-width: 1100px;
+        margin: 30px auto;
+        background-color: #1a1a1a;
+        border: 2px solid #3d2f1e;
+        padding: 20px;
+    }
+    h1 {
+        color: #d4b26a;
+        border-bottom: 2px solid #3d2f1e;
+        padding-bottom: 8px;
+        font-size: 2.2rem;
+        text-shadow: 2px 2px 4px #000;
+    }
+    .infobox {
+        float: right;
+        width: 260px;
+        background-color: #111;
+        border: 2px solid #3d2f1e;
+        padding: 10px;
+        margin: 10px;
+        color: #e1d6b8;
+        font-size: 0.9rem;
+    }
+    .infobox img {
+        width: 100%;
+        border: 1px solid #3d2f1e;
+    }
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        margin-top: 10px;
+    }
+    table, th, td {
+        border: 1px solid #3d2f1e;
+    }
+    th {
+        background-color: #2a1f14;
+        color: #e1d6b8;
+        padding: 6px;
+    }
+    td {
+        background-color: #151515;
+        padding: 6px;
+        color: #e1d6b8;
+    }
+    .section-title {
+        font-size: 1.5rem;
+        margin-top: 30px;
+        color: #d4b26a;
+        border-bottom: 1px solid #3d2f1e;
+        padding-bottom: 4px;
+        text-shadow: 1px 1px 3px #000;
+    }
 </style>
 </head>
-
 <body>
 <div class="container">
 
-<div class="page-title">
-  kitttin <span style="color:#777; font-weight:400;">(boss)</span>
-</div>
+    <div class="infobox">
+        <h3 style="text-align:center; color:#d4b26a;">Kitttin</h3>
+        <img src="Kitttin.PNG" alt="Kitttin" />
+        <table>
+            <tr><th>Level</th><td>??</td></tr>
+            <tr><th>Hitpoints</th><td>??</td></tr>
+            <tr><th>Weakness</th><td>Unknown</td></tr>
+            <tr><th>Members</th><td>Yes</td></tr>
+        </table>
+    </div>
 
-<!-- INFOBOX -->
-<div class="infobox">
+    <h1>Kitttin</h1>
+    <p>
+        Kitttin is a fearsome (and slightly chaotic) boss created for your own custom OSRS-style wiki.
+        This page is a spoof designed to mimic the layout and styling of the Old School RuneScape Wiki boss pages.
+    </p>
 
-  <img class="image" src="Kitttin.PNG" alt="kitttin">
+    <h2 class="section-title">Overview</h2>
+    <p>
+        Kitttin roams unpredictably and is known for dealing emotional and psychological damage. Approach with caution.
+    </p>
 
-  <h3>Overview</h3>
-  <table>
-    ...
-  </table>
-</div>
+    <h2 class="section-title">Stats</h2>
+    <table>
+        <tr><th>Combat Level</th><td>???</td></tr>
+        <tr><th>HP</th><td>???</td></tr>
+        <tr><th>Attack Style</th><td>Mood swings, sarcasm, occasional cuddles</td></tr>
+        <tr><th>Aggressive</th><td>Varies</td></tr>
+        <tr><th>Poisonous</th><td>No</td></tr>
+    </table>
 
-  <h3>Overview</h3>
-  <table>
-    <tr><td><strong>Name</strong></td><td>kitttin</td></tr>
-    <tr><td><strong>Combat level</strong></td><td>394</td></tr>
-    <tr><td><strong>Hitpoints</strong></td><td>2000</td></tr>
-    <tr><td><strong>Aggressive?</strong></td><td>Only upon awakening</td></tr>
-    <tr><td><strong>Poisonous?</strong></td><td>No</td></tr>
-    <tr><td><strong>Max hit</strong></td><td>Memeage (∞)</td></tr>
-    <tr><td><strong>Attack style</strong></td><td>Bite / Affectionate Roasting</td></tr>
-    <tr><td><strong>Weakness</strong></td><td>Beer, compliments, cuddles, football-shaped cats, snacks</td></tr>
-    <tr><td><strong>Immune to</strong></td><td>Pam’s judgement, Bin day</td></tr>
-    <tr><td><strong>Location</strong></td><td>The Bedroom Dungeon (Hard Mode)</td></tr>
-    <tr><td><strong>Release date</strong></td><td>25 November 1994</td></tr>
-    <tr><td><strong>Examine</strong></td><td><em>"Looks human... suspiciously well disguised..."</em></td></tr>
-  </table>
-</div>
+    <h2 class="section-title">Mechanics</h2>
+    <p>
+        The fight consists of several phases depending on mood, energy level, and hunger.
+    </p>
+    <ul>
+        <li><strong>Phase 1:</strong> Mild annoyance.</li>
+        <li><strong>Phase 2:</strong> Requests snacks.</li>
+        <li><strong>Phase 3:</strong> Sudden burst of productivity.</li>
+    </ul>
 
-<!-- MAIN CONTENT -->
-<div style="margin-right:360px;">
-
-<section class="section">
-  <h2>Description</h2>
-  <p><strong>kitttin</strong> is a high-level boss encountered after completing the Master Clue Trail. She is known for her skin-suit disguise, unpredictable attack patterns, and ability to switch between affectionate roasting and devastating meme-based attacks.</p>
-</section>
-
-<section class="section">
-  <h2>Mechanics & Attacks</h2>
-  <p><strong>Behaviour:</strong> kitttin remains dormant until disturbed; upon awakening she cycles between affectionate and aggressive phases.</p>
-  <ul>
-    <li><strong>Bite</strong> — Close-range attack with variable damage.</li>
-    <li><strong>Affectionate Roasting</strong> — Non-lethal, drains morale.</li>
-    <li><strong>Meme Barrage</strong> — Stuns with pure confusion.</li>
-  </ul>
-</section>
-
-<section class="section">
-  <h2>Drops</h2>
-  <table class="drops">
-    <tr><th>Drop category</th><th>Items</th></tr>
-    <tr><td><strong>Always</strong></td><td>Casket; 1 × Kiss of Triumph</td></tr>
-    <tr><td><strong>Common</strong></td><td>Pam's Blessing; Sarcasm Shards</td></tr>
-  </table>
-</section>
-
-<section class="section">
-  <h2>Trivia</h2>
-  <ul>
-    <li>Despite the name, kitttin has never been observed chasing a mouse.</li>
-    <li>Players are advised to bring snacks to avoid enraging her.</li>
-  </ul>
-</section>
-
-</div>
+    <h2 class="section-title">Drops</h2>
+    <table>
+        <tr><th>Item</th><th>Rarity</th></tr>
+        <tr><td>Empty Mug of Tea</td><td>Common</td></tr>
+        <tr><td>Loose Hair Ties</td><td>Uncommon</td></tr>
+        <tr><td>Cryptic Message</td><td>Rare</td></tr>
+    </table>
 
 </div>
 </body>
