--- a/index.html
+++ b/index.html
@@ -34,15 +34,6 @@ body {
    INFOBOX SECTION
 ==================================*/
 
-.infobox-image {
-    float: right;
-    width: 300px;
-    border: 1px solid #d6c7a3;
-    margin-left: 20px;
-    margin-bottom: 12px;
-    background: white;
-}
-
 .infobox {
     float: right;
     width: 300px;
@@ -51,7 +42,15 @@ body {
     padding: 12px;
     font-size: 13px;
     margin-left: 20px;
+    margin-bottom: 15px;
     box-shadow: 0 1px 0 rgba(0,0,0,0.05);
+}
+
+.infobox-image {
+    width: 100%;
+    display: block;
+    border: 1px solid #d6c7a3;
+    margin-bottom: 10px;
 }
 
 .infobox table {
@@ -131,8 +130,7 @@ details summary {
 ==================================*/
 
 @media (max-width: 700px) {
-    .infobox,
-    .infobox-image {
+    .infobox {
         float: none;
         width: 100%;
         margin: 0 0 15px 0;
@@ -153,13 +151,14 @@ details summary {
 </div>
 
 <!-- =============================================
-     INFOBOX + IMAGE
+     INFOBOX (image now inside!)
 ==================================================-->
 
-<img class="infobox-image" src="Kitttin.PNG" alt="kitttin">
-
 <div class="infobox">
-    <h3 style="margin-top:0;">Overview</h3>
+
+    <img class="infobox-image" src="Kitttin.PNG" alt="kitttin">
+
+    <h3 style="margin-top:10px;">Overview</h3>
 
     <table>
         <tr><td><strong>Name</strong></td><td>kitttin</td></tr>
@@ -177,12 +176,14 @@ details summary {
             <td><em>"Looks human... suspiciously well disguised..."</em></td>
         </tr>
     </table>
+
 </div>
 
 <!-- =============================================
      MAIN CONTENT
 ==================================================-->
-<div style="margin-right:340px;"> <!-- Leave space for infobox -->
+
+<div style="margin-right:340px;"> 
     
 <section class="section">
     <h2>Description</h2>
@@ -198,7 +199,7 @@ details summary {
     </ul>
 </section>
 
-<!-- COLLAPSIBLE DROPS (OSRS STYLE) -->
+<!-- COLLAPSIBLE DROPS -->
 <details open>
     <summary>💠 Drops</summary>
     <table class="drops">
