--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ details summary {
         <tr><td><strong>Poisonous?</strong></td><td>No</td></tr>
         <tr><td><strong>Max hit</strong></td><td>Memeage (∞)</td></tr>
         <tr><td><strong>Attack style</strong></td><td>Bite / Affectionate Roasting</td></tr>
-        <tr><td><strong>Weakness</strong></td><td>Beer, compliments, cuddles, football-shaped cats, snacks</td></tr>
+        <tr><td><strong>Weakness</strong></td><td>Beer, compliments, cuddles, football-shaped cats, snacks, impatience with github html</td></tr>
         <tr><td><strong>Immune to</strong></td><td>Pam’s judgement, Bin day</td></tr>
         <tr><td><strong>Location</strong></td><td>The Bedroom Dungeon (Hard Mode)</td></tr>
         <tr><td><strong>Release date</strong></td><td>25 November 1994</td></tr>
@@ -187,7 +187,8 @@ details summary {
     
 <section class="section">
     <h2>Description</h2>
-    <p><strong>kitttin</strong> is a high-level boss encountered after completing the Master Clue Trail. She is known for her skin-suit disguise, unpredictable attack patterns, and ability to switch between affectionate roasting and devastating meme-based attacks.</p>
+    <p><strong>kitttin</strong> is a high-level boss encountered after completing the Master Clue Trail. She is known for her skin-suit disguise, unpredictable attack patterns, and ability to switch between affectionate roasting and devastating meme-based attacks.
+    Kitttin boss can be efficiently defeated using a immobilising attack when offering flowers, offering comeptitive xp/per hour rates and impressive reward caskets on defeat</p>
 </section>
 
 <section class="section">
@@ -204,7 +205,7 @@ details summary {
     <summary>💠 Drops</summary>
     <table class="drops">
         <tr><th>Drop category</th><th>Items</th></tr>
-        <tr><td><strong>Always</strong></td><td>Casket; 1 × Kiss of Triumph</td></tr>
+        <tr><td><strong>Always</strong></td><td>Casket (untradeable) (redeemable only on 25/12/2025; 1 × Kiss of Triumph</td></tr>
         <tr><td><strong>Common</strong></td><td>Pam's Blessing; Sarcasm Shards</td></tr>
     </table>
 </details>
