--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ details summary {
 <section class="section">
     <h2>Description</h2>
     <p><strong>kitttin</strong> is a high-level boss encountered after completing the Master Clue Trail. She is known for her skin-suit disguise, unpredictable attack patterns, and ability to switch between affectionate roasting and devastating meme-based attacks.
-    Kitttin boss can be efficiently defeated using a immobilising attack when offering flowers, offering comeptitive xp/per hour rates and impressive reward caskets on defeat</p>
+    Kitttin boss can be deafeated in her two phase fight, offering comeptitive xp/per hour rates and impressive reward caskets upon defeat</p>
 </section>
 
 <section class="section">
@@ -199,7 +199,24 @@ details summary {
         <li><strong>Meme Barrage</strong> — Stuns with pure confusion.</li>
     </ul>
 </section>
+   
+<section class="section" id="mechanics">
+        <h2>Mechanics &amp; Attacks</h2>
+        <p><strong>Behaviour:</strong> kitttin remains dormant until disturbed; upon awakening she cycles through affectionate and aggressive phases. She may attempt to distract opponents with cuddles or sarcasm.</p>
 
+        <!-- BOSS FIGHT SECTION (exact wording requested) -->
+        <div id="boss-fight" style="margin-top:12px;">
+          <h3 style="margin-bottom:6px;color:#0b4a6f;">Phase 1 — Pam’s Intervention</h3>
+          <p>Upon entering the arena, kitttin immediately summons her loyal familiar, Pam. Pam will circle the player, meow once in mild disapproval, then proceed to ignore all combat entirely.</p>
+          <p>kitttin becomes hopelessly distracted by Pam’s lack of enthusiasm, lowering her aggression and allowing the fight to shift into Phase 2.</p>
+
+          <h3 style="margin-top:12px;margin-bottom:6px;color:#0b4a6f;">Phase 2 — The Floral Weakness</h3>
+          <p>kitttin’s only known vulnerability is exposed: flowers.</p>
+          <p>When presented with a bouquet, kitttin becomes deeply confused, flustered, and temporarily forgets that she is a boss monster.</p>
+          <p>This moment of weakness allows the player to claim the Kiss of Triumph and the final casket without any further resistance.</p>
+        </div>
+      </section>
+   
 <!-- COLLAPSIBLE DROPS -->
 <details open>
     <summary>💠 Drops</summary>
