--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@ details summary {
     </ul>
 </section>
    
-<section class="section" id="mechanics">
-        <h2>Mechanics &amp; Attacks</h2>
-        <p><strong>Behaviour:</strong> kitttin remains dormant until disturbed; upon awakening she cycles through affectionate and aggressive phases. She may attempt to distract opponents with cuddles or sarcasm.</p>
+<section class="section" id="Fight Overview">
+        <h2>Fight Overview</h2>
+        <p><strong>Initation:</strong> kitttin remains dormant until disturbed; upon awakening she cycles through volatile and aggressive phases. She may attempt to distract opponents grunting, snapping and sarcasm.</p>
 
         <!-- BOSS FIGHT SECTION (exact wording requested) -->
         <div id="boss-fight" style="margin-top:12px;">
