--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ details summary {
     
 <section class="section">
     <h2>Description</h2>
-    <p><strong>kitttin</strong> is a high-level boss encountered after completing the Master Clue Trail. She is known for her skin-suit disguise, unpredictable attack patterns, and ability to switch between affectionate roasting and devastating meme-based attacks.
+    <p><strong>kitttin</strong> is a high-level boss encountered after completing the Master Clue Trail. She is known for her human like <s>disguise</s> appearance, unpredictable attack patterns, and ability to switch between affectionate roasting and devastating meme-based attacks.
     Kitttin boss can be deafeated in her two phase fight, offering comeptitive xp/per hour rates and impressive reward caskets upon defeat</p>
 </section>
 
